--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
       sections:
       - file: Z5a
       - file: Z5b
+    - file: Z6
   - caption: Non Zero Sum Games
     chapters:
     - file: N0
